syntax = "proto3";

package com.akedev7.pos.controller;

service PaymentService {
    rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
    string customerId = 1;
    double price = 2;
    double priceModifier = 3;
    string paymentMethod = 4;
    string datetime = 5;
    map<string, string> additionalItem = 6;
}

message PaymentResponse {
    double finalPrice = 1;
    int32 points = 2;
}
